syntax = "proto3";

package syft.lib.torch;
import "proto/lib/torch/tensor.proto";

message ReturnTypes {
  string obj_type = 1;
  repeated bytes values = 2;
}
